--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </ul>
           </div>
         </div>
-        <p class="white-color"><a href="https://github.com/kelly9323/Weather-app" target="_blank">Open-sourse</a> by Anastasiia Shlapak</p>
+        <p class="white-color"><a href="https://github.com/kelly9323/Weather-app" target="_blank">Open-sourse</a> made by Anastasiia Shlapak</p>
       </div>
     </div>
     <script src="index.js"></script>
