--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                 <ul
                   style="list-style: none; padding-left: 0; line-height: 40px;"
                 >
-                  <li class="border-bottom">Lyon
-                  </li>
+                  <li class="border-bottom">Lyon</li>
                   <li class="border-bottom">Toulouse</li>
                   <li class="border-bottom">Montpelier</li>
                   <li class="border-bottom">Nantes</li>
